style.css
html { box-sizing: border-box; }
*, ::after, ::before { box-sizing: inherit; }

body {
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    background-color: #FAFAFA;
}

.happy-traveler {
    margin: 60px auto 0 auto;
}

h1 {
    font-size: 28px;
    font-weight: 500;
    margin: 40px auto;    
}

h2 {
    font-size: 16px;
    margin: 60px auto 15px auto;
}

p {
    font-size: 16px;
    color: #8B8B8B;
    font-weight: 300;
    margin: 0 auto 15px auto;
}

h1::after {
    content: "";
    display: block;
    width: 60px;
    height: 2px;
    background-color: #407BFF;
    margin: 10px auto 30px auto;
}

.main-text p{
    margin: 30px auto;
}

.banner {
    font-size: 13px;
    background-color: #FFFFFF;
    border-radius: 10px;
    box-shadow: #407BFF1F 0 4px 6px;
    height: 80px;
    width: 460px;
    margin-bottom: 15px;
    position: relative;
}

.baner:last-of-type {
    margin-bottom: 0;
}

.banner p{
    text-align: left;
    margin: 30px 20px 20px 10px;
}

.banner img{
    float: left;
    margin: 20px;
}

.master-banner {
    margin: 15px 20px 0 20px;
    display: inline-block;
}

.master-banner:last-of-type {
    margin-bottom: 60px;
}

.button1,
.button2 {
    font-size: 14px;
    color: #FFFFFF;
    font-weight: 400;
    padding: 10px 30px;
    background-color: #407BFF;
    border-radius: 20px;
    border: none;
    display: block;
    margin: 30px auto 10px auto;
}

.grey-button {
    background-color: #8B8B8B;
    margin: 10px auto 0 auto;
}

